--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "astro dev",
 		"start": "astro dev",
-		"build": "astro build && pagefind --site dist",
+		"build": "astro build",
 		"preview": "astro preview",
 		"astro": "astro",
 		"type-check": "tsc --noEmit --isolatedDeclarations",
@@ -37,7 +37,7 @@
 		"markdown-it": "^14.1.0",
 		"mdast-util-to-string": "^4.0.0",
 		"overlayscrollbars": "^2.11.1",
-		"pagefind": "^1.3.0",
+
 		"photoswipe": "^5.4.4",
 		"reading-time": "^1.5.0",
 		"rehype-autolink-headings": "^7.1.0",
