posts: 发布文章《你需要为你的网站上水印吗？水印怎么打才有效？》

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"new-post": "node scripts/new-post.js",
 		"clean": "node scripts/clean-unused-images.js",
 		"del-space": "node scripts/del-space.js",
+		"watermark": "node scripts/add-watermark.js",
 		"format": "biome format --write ./src",
 		"lint": "biome check --write ./src"
 	},
